--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container about_container">
 	<div class="about_message1">
 		<h1 style="color: #b7282c;">エレピア</h1><h3 style="padding-top: 2%;">って？</h3>
 	</div>
@@ -12,7 +12,7 @@
 	<div class="about_line"></div>
 </div>
 
-<div class="container">
+<div class="container about_container2">
 	<div class="row row1">
 		<div class="top_image2 col-xs-6">
 			<%= image_tag('sample1.png', style: "width: 500px;") %>
@@ -31,5 +31,4 @@
 			<%= image_tag('sample2.png', style: "width: 500px;") %>
 		</div>
 	</div>
-	<div class="about_line"></div>
 </div>
