--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,22 +20,49 @@
               </button>
                 <nav class="drawer-nav" role="navigation">
                   <ul class="drawer-menu">
-                    <li class="drawer-menu-item"><%= link_to 'TOP', root_path, class: 'item' %></li>
-                    <li class="drawer-menu-item"><%= link_to 'About', homes_about_path, class: 'item' %></li>
-                    <li class="drawer-menu-item"><%= link_to '投稿一覧', "#", class: 'item' %></li>
-                    <li class="drawer-menu-item"><%= link_to 'ユーザ一覧', "#", class: 'item' %></li>
-                    <li class="drawer-menu-item"><%= link_to 'ランキング', "#", class: 'item' %></li>
-                    <li class="drawer-menu-item"><%= link_to '新規登録', "#", class: 'item' %></li>
-                    <li class="drawer-menu-item"><%= link_to 'ログイン', "#", class: 'item' %></li>
+                    <% if customer_signed_in? %>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'TOP', root_path, class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'About', homes_about_path, class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to '投稿一覧', "#", class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'ユーザ一覧', customers_path, class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'ランキング', "#", class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'マイページ', mypage_customer_path(current_customer), class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'ログアウト', destroy_customer_session_path, method: :delete, class: 'item' %></li>
+
+                    <% else %>
+
+                      <li class="drawer-menu-item">
+                        <%= link_to 'TOP', root_path, class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'About', homes_about_path, class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to '投稿一覧', "#", class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'ユーザ一覧', customers_path, class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'ランキング', "#", class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to '新規登録', new_customer_registration_path, class: 'item' %></li>
+                      <li class="drawer-menu-item">
+                        <%= link_to 'ログイン', new_customer_session_path, class: 'item' %></li>
+
+                    <% end %>
                   </ul>
                 </nav>
           </div>
           <div class="logo">
             <%= link_to image_tag('PF-logo1.png', style: "height: 50px;"), root_path %>
           </div>
-          <p class="navbar-text navbar-right header-message">
-            ようこそ ゲスト さん!
-          </p>
+          <% if customer_signed_in? %>
+            <p class="navbar-text navbar-right header-message">ようこそ <%= @handle_name %> さん!</p>
+          <% end %>
         </div>
       </nav>
     </header>
