--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -17,15 +17,15 @@
 }
 
 .image2 {
-	background-image: url(kaden5.jpeg);
+	background-image: image-url("kaden5.jpeg");
 }
 
 .image3 {
-	background-image: url(kaden6.jpeg);
+	background-image: image-url("kaden6.jpeg");
 }
 
 .image4 {
-	background-image: url(kaden7.jpeg);
+	background-image: image-url("kaden7.jpeg");
 }
 
 .top_image {
