--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -3,16 +3,20 @@
 
 	<div class="user_information_box">
 		<div class="user_information_item">
-			<span>氏名</span>aaa
+			<span>氏名</span>
+			<%= @customer.last_name %> <%= @customer.first_name %>
 		</div>
 		<div class="user_information_item">
-			<span>カナ</span>aaa
+			<span>カナ</span>
+			<%= @customer.last_name_kana %> <%= @customer.first_name_kana %>
 		</div>
 		<div class="user_information_item">
-			<span>表示名</span>aaa
+			<span>表示名</span>
+			<%= @customer.handle_name %>
 		</div>
 		<div class="user_information_item">
-			<span>メールアドレス</span>aaa
+			<span>メールアドレス</span>
+			<%= @customer.email %>
 		</div>
 		<div class="user_information_item">
 			<span>投稿数</span>aaa
