--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Customers#index</h1>
-<p>Find me in app/views/customers/index.html.erb</p>
+<div class="container customer_index_container">
+	<div class="customer_index_title">ユーザ一覧</div>
+</div>
