--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                         <li class="drawer-menu-item">
                           <%= link_to 'ユーザ一覧', customers_path, class: 'item' %></li>
                         <li class="drawer-menu-item">
-                          <%= link_to 'ランキング', "#", class: 'item' %></li>
+                          <%= link_to 'ランキング', ranking_posts_path, class: 'item' %></li>
                         <li class="drawer-menu-item">
                           <%= link_to 'マイページ', mypage_customer_path(current_customer), class: 'item' %></li>
                         <li class="drawer-menu-item">
@@ -48,7 +48,7 @@
                         <li class="drawer-menu-item">
                           <%= link_to 'ユーザ一覧', customers_path, class: 'item' %></li>
                         <li class="drawer-menu-item">
-                          <%= link_to 'ランキング', "#", class: 'item' %></li>
+                          <%= link_to 'ランキング', ranking_posts_path, class: 'item' %></li>
                         <li class="drawer-menu-item">
                           <%= link_to '新規登録', new_customer_registration_path, class: 'item' %></li>
                         <li class="drawer-menu-item">
