--- a/app/views/customers/mypage.html.erb
+++ b/app/views/customers/mypage.html.erb
@@ -6,13 +6,13 @@
 			<%= link_to '投稿する', new_post_path, class: 'mypage_item' %>
 		</div>
 		<div class="mypage_list">
-			<%= link_to '自分の投稿', all_post_path(current_customer), class: 'mypage_item' %>
+			<%= link_to '自分の投稿', all_posts_path(customer_id: @customer.id), class: 'mypage_item' %>
 		</div>
 		<div class="mypage_list">
 			<%= link_to 'ユーザ情報', customer_path(current_customer), class: 'mypage_item' %>
 		</div>
 		<div class="mypage_list">
-			<%= link_to 'お気に入りリスト', mypage_customer_path(current_customer), class: 'mypage_item' %>
+			<%= link_to 'お気に入りリスト', bookmarks_path, class: 'mypage_item' %>
 		</div>
 	</div>
 </div>
