--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,29 +1,65 @@
 <div class="container user_information_container">
 	<div class="user_information_title">ユーザ情報</div>
 
-	<div class="user_information_box">
-		<div class="user_information_item">
-			<span>氏名</span>
-			<%= @customer.last_name %> <%= @customer.first_name %>
-		</div>
-		<div class="user_information_item">
-			<span>カナ</span>
-			<%= @customer.last_name_kana %> <%= @customer.first_name_kana %>
-		</div>
-		<div class="user_information_item">
-			<span>表示名</span>
-			<%= @customer.handle_name %>
-		</div>
-		<div class="user_information_item">
-			<span>メールアドレス</span>
-			<%= @customer.email %>
-		</div>
-		<div class="user_information_item">
-			<span>投稿数</span>aaa
-		</div>
-	</div>
+	<% if @customer.id == current_customer.id %>
+		<div class="row">
+			<div class="user_information_item">
+				<%= attachment_image_tag @customer, :profile_image, :fill, 350, 350, class: "img-circle pull-left user_image_show", fallback: "no_image_square.jpg" %>
+			</div>
 
-	<div class="user_information_button">
-		<%= link_to '編集する', edit_customer_path %>
-	</div>
+			<div class="col-xs-5 user_information_box">
+				<table>
+					<tr>
+						<td>氏名</td>
+						<td><%= @customer.last_name %> <%= @customer.first_name %></td>
+					</tr>
+					<tr>
+						<td>カナ</td>
+						<td><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></td>
+					</tr>
+					<tr>
+						<td>表示名</td>
+						<td><%= @customer.handle_name %></td>
+					</tr>
+					<tr>
+						<td>メールアドレス</td>
+						<td><%= @customer.email %></td>
+					</tr>
+					<tr>
+						<td>投稿数</td>
+						<td><%= @post.count %>件</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+
+		<div class="user_information_button">
+			<%= link_to '編集する', edit_customer_path, class: "btn btn-success btn-md" %>
+		</div>
+
+	<% else %>
+
+		<div class="row">
+			<div class="user_information_item">
+				<%= attachment_image_tag @customer, :profile_image, :fill, 350, 350, class: "img-circle pull-left user_image_show", fallback: "no_image_square.jpg" %>
+			</div>
+
+			<div class="col-xs-5 user_information_box_other">
+				<table>
+					<tr>
+						<td>表示名</td>
+						<td><%= @customer.handle_name %></td>
+					</tr>
+					<tr>
+						<td>投稿数</td>
+						<td><%= @post.count %>件</td>
+					</tr>
+				</table>
+			</div>
+
+			<div class="pull-right user_information_link">
+				<%= link_to 'このユーザの投稿一覧へ >>>', all_posts_path(customer_id: @customer.id) %>
+			</div>
+		</div>
+	<% end %>
 </div>
