--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,39 +1,44 @@
-<div class="container user_edit_container">
-	<div class="user_edit_title">投稿編集</div>
+<div class="container post_edit_container">
+	<div class="post_edit_title">投稿編集</div>
 
 	<%= form_for(@post) do |f| %>
-		<div class="post_edit_box">
-			<div class="post_edit_item">
-				<%= attachment_image_tag @post, :product_image, :fill, 100, 100, class: "product_image_show", fallback: "no_image.jpg" %>
-				<%= f.attachment_field :product_image %>
+		<div class="row">
+			<div class="col-xs-5 post_edit_img_box">
+				<%= attachment_image_tag @post, :product_image, :fill, 400, 400, class: "pull-left post_edit_img", fallback: "no_image_square.jpg", size: '400x399' %>
+				<%= f.attachment_field :product_image, class: "post_edit_img_button" %>
 			</div>
-			<div class="post_edit_item">
-				<p>タイトル</p>
-				<%= f.text_field :title, autofocus: true, autocomplete: "title" %>
-			</div>
-			<div class="post_edit_item">
-				<p>商品名</p>
-				<%= f.text_field :product_name, autofocus: true, autocomplete: "product_name" %>
-			</div>
-			<div class="post_edit_item">
-				<p>購入日</p>
-				<%= f.text_field :bay_day, autofocus: true, autocomplete: "bay_day" %>
-			</div>
-			<div class="post_edit_item">
-				<p>購入時価格</p>
-				<%= f.text_field :price, autofocus: true, autocomplete: "price" %>
-			</div>
-			<div class="post_edit_item">
-				<p>コメント</p>
-				<%= f.text_area :body, autofocus: true, autocomplete: "body" %>
-			</div>
-			<div class="post_edit_item" id="star">
-				<%= f.label :rate,'評価 ' %>
-				<%= f.hidden_field :rate, id: :review_star %>
-		</div>
 
+			<div class="pull-right post_edit_box">
+				<div class="post_edit_item">
+					<p>タイトル</p>
+					<%= f.text_field :title, autofocus: true, autocomplete: "title", class: "title_area_edit" %>
+				</div>
+				<div class="post_edit_item">
+					<p>商品名</p>
+					<%= f.text_field :product_name, autofocus: true, autocomplete: "product_name", class: "name_area_edit" %>
+				</div>
+				<div class="post_edit_item_a">
+					<div class="post_edit_in_item_a">
+						<p>購入日</p>
+						<%= f.text_field :bay_day, autofocus: true, autocomplete: "bay_day", class: "bay_area_edit" %>
+					</div>
+					<div class="post_edit_in_item_b">
+						<p>購入時価格</p>
+						<%= f.text_field :price, autofocus: true, autocomplete: "price", class: "price_area_edit" %>
+					</div>
+				</div>
+				<div class="post_edit_item">
+					<p>コメント</p>
+					<%= f.text_area :body, autofocus: true, autocomplete: "body", class: "comment_area_edit" %>
+				</div>
+				<div class="post_edit_item" id="star">
+					<%= f.label :rate,'評価', class: "post_edit_rate" %>
+					<%= f.hidden_field :rate, id: :review_star %>
+				</div>
+			</div>
+		</div>
 		<div class="post_edit_actions">
-          <%= f.submit "更新する", class: "btn btn-success btn-sm" %>
+          <%= f.submit "更新する", class: "btn btn-success btn-md" %>
         </div>
     <% end %>
 </div>
