--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,11 +2,22 @@
 	<div class="post_index_title">投稿一覧</div>
 
 	<div class="post_index_box">
-		<% @post.each do |post| %>
-			<p>タイトル</p>
-			<span><%= post.title %></span>
-			<p>商品名</p>
-			<span><%= post.product_name %></span>
-		<% end %>
+		<% @posts.each do |post| %>
+    		<%= link_to post_path(post) do %>
+      			<div class="post_index_item">
+        			<div class="index_img">
+          				<%= attachment_image_tag post, :product_image, :fill, 200, 200, class: "post_index_img", fallback: "no_image_square.jpg", size: '200x200' %>
+       				</div>
+        			<div class="list_box">
+          				<div class="post_index_name">
+            				<%= post.title %>
+         				</div>
+          				<div class="post_index_day">
+          					<%= l post.created_at, format: :short %>
+          				</div>
+        			</div>
+      			</div>
+    		<% end %>
+  		<% end %>
 	</div>
 </div>
