--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container bookmark_container">
-	<div class="bookmark_title">お気に入りリスト</div>
+	<div class="bookmark_title">
+		<p class="bookmark_title_1">Favorites List</p>
+		<p class="bookmark_title_2">お気に入りリスト</p>
+	</div>
 
 	<div class="bookmark_box">
 		<table>
