--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,5 +1,8 @@
 <div class="container user_edit_container">
-	<div class="user_edit_title">ユーザ情報編集</div>
+	<div class="user_edit_title">
+		<p class="user_edit_title_1">User Edit</p>
+		<p class="user_edit_title_2">ユーザ情報編集</p>
+	</div>
 
 	<div class="row">
 		<%= form_for(@customer) do |f| %>
