--- a/app/views/customers/mypage.html.erb
+++ b/app/views/customers/mypage.html.erb
@@ -1,5 +1,8 @@
 <div class="container mypage_container">
-	<div class="mypage_title">マイページ</div>
+	<div class="mypage_title">
+		<p class="mypage_title_1">My Page</p>
+		<p class="mypage_title_2">マイページ</p>
+	</div>
 
 	<div class="mypage_box">
 		<div class="mypage_list">
