--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,5 +1,12 @@
 <div class="container user_information_container">
-	<div class="user_information_title">ユーザ情報</div>
+	<div class="user_information_title">
+		<p class="user_information_title_1">
+			User Information
+		</p>
+		<p class="user_information_title_2">
+		 	ユーザ情報
+		</p>
+	</div>
 
 	<% if @customer.id == current_customer.id %>
 		<div class="row">
