--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,8 +73,11 @@
       </main>
 
       <footer>
-        <p>こちらはポートフォリオのサイトとなっております。<br>
-        ©︎iNO.inc</p>
+        <p class="footer_message">こちらはポートフォリオのサイトとなっております。<br>
+          ©︎iNO.inc<br>
+          製作者情報<br>
+          <%= link_to 'Created by iNO', homes_author_path, style: "color: #b7282c;" %>
+        </p>
       </footer>
     </div>
   </body>
