--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,8 @@
 <div class="container post_edit_container">
-	<div class="post_edit_title">投稿編集</div>
+	<div class="post_edit_title">
+		<p class="post_edit_title_1">Post Edit</p>
+		<p class="post_edit_title_2">投稿編集</p>
+	</div>
 
 	<%= form_for(@post) do |f| %>
 		<div class="row">
