--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container post_index_container">
-	<div class="post_index_title">投稿一覧</div>
+	<div class="post_index_title">
+    <p class="post_index_title_1">Posts List</p>
+    <p class="post_index_title_2">投稿一覧</p>
+  </div>
 
 	<div class="post_index_box">
 		<% @posts.each do |post| %>
