--- a/app/views/posts/ranking.html.erb
+++ b/app/views/posts/ranking.html.erb
@@ -1,5 +1,9 @@
 <div class="container post_ranking_container">
-  <div class="post_ranking_title">ランキング</div>
+  <div class="post_ranking_title">
+    <p class="post_ranking_title_1">Ranking</p>
+    <p class="post_ranking_title_2">ランキング</p>
+  </div>
+  <p class="post_ranking_title_3">いいねの数に応じて変動します</p>
 
   <div class="post_ranking_box">
     <% @posts.each.with_index(1) do |post, i| %>
