--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -5,13 +5,37 @@
 .bookmark_container {
 	padding-top: 70px;
 	margin-bottom: 70px;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .bookmark_title {
-	font-size: 25px;
-	margin-bottom: 50px;
+	margin-bottom: 70px;
 	text-align: center;
+}
+
+.bookmark_title_1 {
+	font-size: 25px;
+	color: #b7282c;
+	position: relative;
+	display: inline-block;
+}
+
+.bookmark_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.bookmark_title_2 {
+	color: #b7282c;
+	font-size: 25px;
 }
 
 .bookmark_box table {
