--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -46,12 +46,10 @@
 	display: flex;
 	margin-left: 42%;
 	margin-bottom: 40px;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .about_message2 {
 	text-align: center;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .about_message2 p {
@@ -59,7 +57,15 @@
 	margin-bottom: 15px;
 }
 
-.about_line {
+.about_line1 {
+	border-top: solid 1px gray;
+	text-align: center;
+	width: 100%;
+	margin-top: 110px;
+	margin-bottom: 120px;
+}
+
+.about_line2 {
 	border-top: solid 1px gray;
 	text-align: center;
 	width: 100%;
@@ -71,42 +77,49 @@
 	margin-bottom: 20px;
 }
 
+.row2 {
+	margin-bottom: 20px;
+}
+
 .top_text2 {
-	padding-top: 80px;
-	font-size: 15px;
-	font-family: 'Noto Sans JP', sans-serif;
+	padding-top: 110px;
+	font-size: 18px;
 }
 
 .top_text3 {
-	margin-top: 100px;
-    font-size: 15px;
-    font-family: 'Noto Sans JP', sans-serif;
+	margin-top: 110px;
+    font-size: 18px;
 }
 
-.top_text4 {
+.top_title {
+	margin-bottom: 80px;
 	text-align: center;
 }
 
-.top_text4 p {
+.top_title_1 {
 	font-size: 25px;
-	font-family: 'Noto Sans JP', sans-serif;
+	color: #b7282c;
 	position: relative;
 	display: inline-block;
-	margin-bottom: 50px;
 }
 
-/* 下線 */
-.top_text4 p:before {
-	content: '';
-	position: absolute;
-	left: 50%;
-	bottom: -7px; /*線の上下位置*/
-	display: inline-block;
-	width: 200px; /*線の長さ*/
-	height: 2px; /*線の太さ*/
-	transform: translateX(-50%); /*位置調整*/
-	background-color: #b7282c; /*線の色*/
-	border-radius: 2px; /*線の丸み*/
+.top_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.top_title_2 {
+	color: #b7282c;
+	font-size: 25px;
 }
 
 .post_top_box {
@@ -157,5 +170,97 @@
 }
 
 .about_container2 {
+	padding-bottom: 100px;
+}
+
+
+/* homes/author */
+
+.author_container {
+	padding-top: 70px;
 	padding-bottom: 70px;
+	font-family: 'Noto Serif JP', 'Noto Sans JP',sans-serif;
+}
+
+.author_title {
+	margin-bottom: 50px;
+	text-align: center;
+}
+
+.author_title_1 {
+	font-size: 25px;
+	color: #b7282c;
+	position: relative;
+	display: inline-block;
+}
+
+.author_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.author_title_2 {
+	color: #b7282c;
+	font-size: 25px;
+}
+
+.author_box {
+	width: 860px;
+	height: 1360px;
+	margin: 0 auto;
+	background-color: #b7282c;
+}
+
+.author_image {
+	float: left;
+	margin-bottom: 20px;
+}
+
+.author_message {
+	float: left;
+	color: white;
+	padding-left: 35px;
+}
+
+.author_message table {
+	width: 145%;
+}
+
+.author_message td {
+	padding-top: 40px;
+}
+
+.author_message2 {
+	padding-top: 40px;
+	float: left;
+	color: white;
+	padding-left: 35px;
+	margin-bottom: 20px;
+}
+
+.author_image2 {
+	text-align: center;
+}
+
+.author_message3 {
+	float: left;
+	color: white;
+	padding-left: 35px;
+	margin-bottom: 20px;
+}
+
+.author_message4 {
+	float: left;
+	color: white;
+	padding-left: 35px;
+	margin-bottom: 20px;
 }
