--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,13 +8,37 @@
 .post_new_container {
 	padding-top: 70px;
 	margin-bottom: 70px;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .post_new_title {
-	font-size: 25px;
 	margin-bottom: 50px;
 	text-align: center;
+}
+
+.post_new_title_1 {
+	font-size: 25px;
+	color: #b7282c;
+	position: relative;
+	display: inline-block;
+}
+
+.post_new_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.post_new_title_2 {
+	color: #b7282c;
+	font-size: 25px;
 }
 
 .col-xs-5.post_new_img_box {
@@ -67,12 +91,8 @@
 	text-align: center;
 }
 
-.title_area::placeholder {
-	text-align: right;
-}
-
-.name_area::placeholder {
-	text-align: right;
+.comment_area::placeholder {
+	padding: 5px 0 0 5px;
 }
 
 
@@ -81,13 +101,41 @@
 .post_show_container {
 	padding-top: 70px;
 	margin-bottom: 85px;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .post_show_title {
-	font-size: 20px;
 	margin-bottom: 50px;
 	text-align: center;
+}
+
+.post_show_title_1 {
+	font-size: 25px;
+	color: #b7282c;
+	position: relative;
+	display: inline-block;
+}
+
+.post_show_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.post_show_title_2 {
+	color: #b7282c;
+	font-size: 25px;
+}
+
+.user_img_tag {
+	padding-right: 50px;
 }
 
 .user_img_tag p {
@@ -107,13 +155,24 @@
 	margin-bottom: 25px;
 }
 
+.p_item {
+	font-size: 13px;
+	border-bottom: solid 1px #b7282c;;
+	display: inline-block;
+}
+
+.p_item_a {
+	font-size: 13px;
+	border-bottom: solid 1px #b7282c;;
+}
+
 .post_show_item_a {
 	margin-bottom: 25px;
 	display: flex;
 }
 
 .post_show_item_b {
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 
 .post_show_item_c {
@@ -129,14 +188,22 @@
 	padding-left: 40px;
 }
 
+.post_show_in_item_d {
+    padding-top: 2px;
+}
+
 .post_show_in_item_e {
-	padding-left: 40px;
+	padding-left: 72px;
 }
 
 .post_show_action {
 	text-align: center;
 	margin-top: 80px;
 	margin-bottom: 80px;
+}
+
+a.btn.btn-primary.btn-md {
+    margin-right: 40px;
 }
 
 .post_show_comments {
@@ -162,19 +229,71 @@ input.btn.btn-base-1.btn-md {
 	margin-bottom: 20px;
 }
 
+.comment {
+	display: flex;
+	align-items: center;
+	padding-bottom: 15px;
+}
+
+.comment_entry {
+	margin-right: 50px;
+}
+
+.comment_box {
+	display: flex;
+	align-items: center;
+	margin: 0 0 0 auto;
+}
+
+.comment_name {
+	padding-right: 10px;
+}
+
+.comment_date {
+	padding-right: 10px;
+}
+
+.comment_d_button {
+	padding-right: 50px;
+}
+
 
 /* post/index */
 
 .post_index_container {
 	padding-top: 70px;
 	margin-bottom: 70px;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .post_index_title {
-	font-size: 25px;
-	margin-bottom: 50px;
+	margin-bottom: 80px;
 	text-align: center;
+}
+
+.post_index_title_1 {
+	font-size: 25px;
+	color: #b7282c;
+	position: relative;
+	display: inline-block;
+}
+
+.post_index_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.post_index_title_2 {
+	color: #b7282c;
+	font-size: 25px;
 }
 
 .post_index_box {
@@ -222,13 +341,37 @@ input.btn.btn-base-1.btn-md {
 .post_edit_container {
 	padding-top: 70px;
 	margin-bottom: 70px;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .post_edit_title {
-	font-size: 25px;
 	margin-bottom: 50px;
 	text-align: center;
+}
+
+.post_edit_title_1 {
+	font-size: 25px;
+	color: #b7282c;
+	position: relative;
+	display: inline-block;
+}
+
+.post_edit_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.post_edit_title_2 {
+	color: #b7282c;
+	font-size: 25px;
 }
 
 .col-xs-5.post_edit_img_box {
@@ -287,11 +430,42 @@ input.btn.btn-base-1.btn-md {
 .post_ranking_container {
 	padding-top: 70px;
 	margin-bottom: 70px;
-	font-family: 'Noto Sans JP', sans-serif;
 }
 
 .post_ranking_title {
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+.post_ranking_title_1 {
 	font-size: 25px;
+	color: #b7282c;
+	position: relative;
+	display: inline-block;
+}
+
+.post_ranking_title_1:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -5px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: #b7282c;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.post_ranking_title_2 {
+	color: #b7282c;
+	font-size: 25px;
+}
+
+.post_ranking_title_3 {
+	font-size: 13px;
+	padding-top: 20px;
 	margin-bottom: 50px;
 	text-align: center;
 }
@@ -304,6 +478,7 @@ input.btn.btn-base-1.btn-md {
 
 .post_ranking_box p {
 	font-size: 18px;
+	margin-top: 80px;
 }
 
 .post_ranking_item{
@@ -323,4 +498,18 @@ input.btn.btn-base-1.btn-md {
 	height: 70px;
 	position:relative;
 	z-index: 1;
+}
+
+.list_box_a:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -40px;/*線の上下位置*/
+  display: inline-block;
+  width: 250px;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: gray;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
 }
