--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -9,26 +9,26 @@
 		<p>こちらのサイトは写真の投稿やレビュー、他のユーザがオススメしている</p>
 		<p>電化製品を見ることができ、人気のランキングなどもあります。</p>
 	</div>
-	<div class="about_line"></div>
+	<div class="about_line1"></div>
 </div>
 
 <div class="container about_container2">
 	<div class="row row1">
 		<div class="top_image2 col-xs-6">
-			<%= image_tag('sample1.png', style: "width: 500px;") %>
+			<%= image_tag('PF_photo.jpg', style: "width: 500px;") %>
 		</div>
 		<div class="top_text2 col-xs-offset-1 col-xs-5">
 			<P>オススメの電化製品を投稿しよう！<br>
 			投稿はマイページから行えます！</P>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row row2">
 		<div class="top_text3 col-xs-offset-1 col-xs-5">
 			<P>いいねしたり、他のユーザが投稿した製品を<br>
 			お気に入りリストに追加もできます！</P>
 		</div>
 		<div class="top_image3 col-xs-6">
-			<%= image_tag('sample2.png', style: "width: 500px;") %>
+			<%= image_tag('PF_photo4.png', style: "width: 500px;") %>
 		</div>
 	</div>
 </div>
