--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,8 @@
 <div class="container post_new_container">
-	<div class="post_new_title">投稿</div>
+	<div class="post_new_title">
+		<p class="post_new_title_1">New Post</p>
+		<p class="post_new_title_2">新規投稿</p>
+	</div>
 
 	<%= form_for(@post) do |f| %>
 		<div class="row">
@@ -20,11 +23,11 @@
 				<div class="post_new_item_a">
 					<div class="post_new_in_item_a">
 						<p>購入日</p>
-						<%= f.text_field :bay_day, placeholder: "20xx/xx/xx", class: "bay_area"%>
+						<%= f.text_field :bay_day, placeholder: "半角英数8字", class: "bay_area"%>
 					</div>
 					<div class="post_new_in_item_b">
 						<p>購入時価格</p>
-						<%= f.text_field :price, placeholder: "¥x,xxx", class: "price_area"%>
+						<%= f.text_field :price, placeholder: "半角英数字", class: "price_area"%>
 					</div>
 				</div>
 				<div class="post_new_item">
