--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,9 @@
 <div class="container post_show_container">
 	<div class="row">
-		<div class="post_show_title">投稿詳細</div>
+		<div class="post_show_title">
+			<p class="post_show_title_1">Post Details</p>
+			<p class="post_show_title_2">投稿詳細</p>
+		</div>
 
 		<div class="col-xs-12 post_show_user_box">
 			<%= link_to customer_path(@customer) do %>
@@ -17,35 +20,35 @@
 
 		<div class="col-xs-offset-1 col-xs-6 post_show_box">
 			<div class="post_show_item">
-				<p>タイトル</p>
+				<p class="p_item">タイトル:</p>
 				<p><%= @post.title %></p>
 			</div>
 			<div class="post_show_item">
-				<p>商品名</p>
+				<p class="p_item">商品名:</p>
 				<p><%= @post.product_name %></p>
 			</div>
 			<div class="post_show_item_a">
 				<div class="post_show_in_item_a">
-					<p>購入日</p>
+					<p class="p_item">購入日:</p>
 					<p><%= @post.bay_day %></p>
 				</div>
 				<div class="post_show_in_item_b">
-					<p>購入時価格</p>
+					<p class="p_item">購入時価格:</p>
 					<p>¥<%= @post.price.to_s(:delimited) %></p>
 				</div>
 				<div class="post_show_in_item_c">
-					<p>投稿日</p>
+					<p class="p_item">投稿日:</p>
 					<p><%= l @post.created_at, format: :short %></p>
 				</div>
 			</div>
 			<div class="post_show_item_b">
-				<p>コメント</p>
+				<p class="p_item">コメント:</p>
 				<p><%= @post.body %></p>
 			</div>
 
 			<div class="post_show_item_c">
 				<div class="post_show_in_item_d">
-					<p>いいね</p>
+					<p class="p_item_a">いいね</p>
 					<% if @post.favorited_by?(current_customer) %>
 					  <td>
 					  	<%= link_to post_favorites_path(@post), method: :delete do %>
@@ -63,7 +66,7 @@
 					<% end %>
 				</div>
 				<div class="post_show_in_item_e">
-					<p>評価</p>
+					<p class="p_item">評価</p>
 					<div id="star-rate"></div>
 				</div>
 			</div>
@@ -81,28 +84,32 @@
 		</div>
 	<% end %>
 
-	<div class="post_show_comments">
+	<div class="row post_show_comments">
 		<p>コメント一覧</p>
-		<% @post.post_comments.each do |post_comment| %>
-			<li class="comment">
-				<div class="comment_text">
-					<div class="comment_entry">
-						<%= post_comment.comment %>
-					</div>
-					<div class="comment_name">
-						<%= post_comment.customer.handle_name %>
-					</div>
-					<div class="comment_date">
-						<%= post_comment.created_at.strftime('%Y/%m/%d') %>
-					</div>
-					<% if post_comment.customer == current_customer %>
-						<div class="comment_d">
-							<%= link_to "コメントを削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete, class: "btn btn-danger btn-md" %>
+		<ul class="container">
+			<% @post.post_comments.each do |post_comment| %>
+				<li>
+					<div class="comment">
+						<div class="comment_entry">
+							<%= post_comment.comment %>
 						</div>
-					<% end %>
-				</div>
-			</li>
-		<% end %>
+						<div class="comment_box">
+							<div class="comment_name">
+								- <%= post_comment.customer.handle_name %> -
+							</div>
+							<div class="comment_date">
+								<%= post_comment.created_at.strftime('%Y/%m/%d') %>
+							</div>
+							<% if post_comment.customer == current_customer %>
+								<div class="comment_d_button">
+									<%= link_to "コメントを削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete, class: "btn btn-danger btn-sm" %>
+								</div>
+							<% end %>
+						</div>
+					</div>
+				</li>
+			<% end %>
+		</ul>
 	</div>
 
 	<%= form_for [@post, @post_comment] do |f| %>
